Fix gap between sections, footer class content display

--- a/index.css
+++ b/index.css
@@ -24,11 +24,11 @@ body {
     text-decoration: none;
 }
 #navbar a{
-    text-decoration: none;
+    text-decoration: ;
     color: white;
 }
 button {
-    width: 10%;
+    width: 15%;
     padding: 10px;
     background: #ED661F;
     color: white;
@@ -45,11 +45,15 @@ button {
     margin-top: 10%;
 }
 .section2 {
-    margin-top: 10%;
+    margin-top: 20%;
 }
-.div1 {
-    background-image: url(assets/image\ 1.png);
+.section3 {
+    box-shadow: 0px 20px 20px gray;
 }
+.section4 {
+    margin-top: 5%;
+}
+
 .one {
     float: right;
     width: 50%;
@@ -112,6 +116,7 @@ button {
     flex-direction: column;
     justify-content: space-between;
     gap: 10px;
+    margin-bottom: 10%;
 }
 .four1 {
     margin-right: 5%;
@@ -125,10 +130,10 @@ button {
     gap: 10%;
 }
 .section1 h1 {
-    font-size:xx-large;
+    font-size:xxx-large;
     font-weight: 900;
 }
-.section3 h2, h3 {
+.section3 h2 h3 {
     font-size:x-large;
     font-weight: 900;
 }
@@ -145,6 +150,7 @@ button {
   }
 .more {
     margin-left: 80%;
+    margin-top: 10%;
 }
 .fa {
     width: 10%;
@@ -174,7 +180,7 @@ button {
 
 .subscribe-section {
     background-color: black;
-    margin-top: 60%;
+    margin-top: 15%;
     margin-bottom: 5px;
     color: white;
 }
@@ -206,33 +212,52 @@ button {
     background: #f1f1f1;
     border: 1px solid grey;
   }
-  
+  nav a:focus {
+    text-decoration: underline;
+  }
   button:hover {
     background: #f05704;
   }
-.footer {
+.section6 {
+    margin-top: 0.5%;
+}
+
+#footer {
     font-family: 'Inter', sans-serif;
     background-color: black;
     color: white;
     width: 100%;
-    margin: 100% 0 0 0;
     display: flex;
     flex-direction: row;
     justify-content:space-around;
     align-items: center;
 }
-
-.footer-left {
+.ftr {
     float: left;
     width: 50%;
+}
+.footer {
+    font-family: 'Inter', sans-serif;
+    background-color: black;
+    color: white;
+    width:50%;
+    display: flex;
+    flex-direction:column;
+    justify-content:space-around;
+    align-items: center;
+}
+.footer-left {
+    
 }
 .footer-right {
-    float: left;
-    width: 50%;
+    float:l;
+    width:;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
 }
 .footer-right1 {
+    display: flex;
+    flex-direction: column;
     float: left;
     width: 33.33%;
 }
